# GraphSLAM

./: .gitmodules  README.md
code/: .gitignore
code/example_g2o/: CMakeLists.txt
code/g2o-master/: Files I've created
code/g2o-master/g2o/examples/my_optimize/: CMakeLists.txt  data_association.cpp  data_association.h  my_optimize.cpp  my_optimize.cpp.BACKUP.28068.cpp  my_optimize.cpp.LOCAL.28068.cpp  my_optimize_old.cpp  my_optimize_old2.cpp
code/g2o-master/g2o/examples/my_slam/: CMakeLists.txt  data_association.cpp  data_association.h  my_slam.cpp
code/g2o-tests/data/: incremental_corr.g2o  simple_corr.g2o  simple_corr2.g2o  simple_corr2_noise.g2o  simple_sim.g2o
code/g2o-tests/g2o/: test-g2o.py  test-g2o.py.save
code/g2o-tests/g2o_anonymize_observations/: test-g2o_anonymize_observations.py
code/g2o-tests/g2o_incremental/: HELP  test-g2o_incremental.py
code/g2o-tests/g2o_simulator2d/: test-g2o_simulator2d.py
code/g2o-tests/g2o_viewer/: HELP
code/g2o-tests/my_optimize/: marginals_info_100  marginals_noise_1  test-my_optimize.py
code/my-scripts/my-simulator/: CMakeLists.txt
code/my-scripts/my-slam/: CMakeLists.txt  asdf.txt
code/my-scripts/my-slam/src/: data_association.cpp  data_association.h  data_association_old.cpp  my_slam.cpp  my_slam2.cpp  my_slam_old.cpp  slam_functs.cpp  slam_functs.h  util_functs.cpp  util_functs.h
code/my-slam/commons/: slamData.py  slamFunctions.py
code/my-slam/v1-known-correspondence/: my-slam.py
code/my-slam/v1w1-known-correspondence/: my-slam.py
code/my-slam/v1w2-known-correspondence/: my-slam.py
code/my-slam/v2-unknown-correspondence/: .gitignore  my-slam.py
code/python-helpers/: README.md
code/python-helpers/commons/: associationFunctions.py  slamData.py  slamFunctions.py
code/python-helpers/v1-known-correspondence/: my-slam.py  removeFilesInFolders.sh
code/python-helpers/v1w1-known-correspondence/: my-slam.py
code/python-helpers/v1w2-known-correspondence/: my-slam.py
code/python-helpers/v2-unknown-correspondence/: .gitignore  callgrind.out.7792  ls.callgrind  my-slam.py  out.dot  profGraph.sh  profGraph2.sh
code/python-helpers/v3-real-data/: .gitignore  asdf  my-slam.py  my_slam2_prof.prof  nohup.out  removeFilesInFolders.sh  slam2_prof.callgrind  slam2_prof.dot
code/python-helpers/v3-real-data-copy/: my-slam.py
code/test-g2o/data/: add_noise.py  guess_in_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o  simple_corr.g2o  simple_corr2.g2o  simple_corr2_noise.g2o  simple_odom.g2o  simple_sim.g2o  simple_turn.g2o
code/test-g2o/g2o/: HELP  test-g2o.py
code/test-g2o/g2o_anonymize_observations/: test-g2o_anonymize_observations.py
code/test-g2o/g2o_incremental/: test-g2o_incremental.py
code/test-g2o/g2o_simulator2d/: test-g2o_simulator2d.py
code/test-g2o/g2o_viewer/: test-g2o_viewer.py
code/test-g2o/my_optimize/: test-my_optimize.py
code/test-g2o/my_slam/: test-my_optimize.py
correspondence-test/: correspondence-test.py  correspondence-test.py~
correspondence-test/guess_out/: guess_out_i_10_s_300_l_300_p_5_a_50_ps_10.g2o
correspondence-test/opt_out/: opt_out_i_10_s_300_l_300_p_5_a_50_ps_10.g2o
doc/Memoria/: cap1.tex  cap2.tex  cap3.tex  cap4.tex  conclu.tex  glosario.tex  memoria.aux  memoria.bbl  memoria.blg  memoria.out  memoria.tdo  memoria.tex  memoria.toc  packages.tex  umemoria.cls
doc/Memoria/imagenes/: kernelsPlot.py  maxDistance.py  maxVariace.py
doc/Memoria/tikz/: graph.pgf  graphslam.pgf  matrix1.pgf  matrix2.pgf  matrix3.pgf  template.tex
example_g2o/: CMakeLists.txt~
g2o-master/doc/doxygen/: doxygen_sqlite3.db
g2o-master/g2o/examples/: CMakeLists.txt
g2o-tests/data/: guess_in_i_10_s_300_l_300_p_5_a_50_ps_10.g2o  protocol.g2o
g2o-tests/g2o/: test-g2o.py
g2o-tests/g2o_anonymize_observations/: HELP
g2o-tests/g2o_incremental/: res.g2o  test-g2o_incremental.py
g2o-tests/g2o_simulator2d/: HELP  res.g2o  test-g2o_simulator2d.py
g2o-tests/my_optimize/: HELP  res.g2o  test-g2o.py  test-my_optimize.py
my-slam/: .gitignore
my-slam/commons/: slamFunctions.py  slamFunctions.py~
my-slam/v1-known-correspondence/: .gitignore  README  my-slam.py  my-slam.py~
my-slam/v1-known-correspondence/guess_out/: guess_out_i_10_s_300_l_300_p_50_a_500_ps_100.g2o
my-slam/v1-known-correspondence/opt_out/: opt_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  opt_out_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o
my-slam/v1-known-correspondence/sim_out/: sim_out_i_10_s_300_l_300_p_5_a_50_ps_10.g2o
my-slam/v1v-known-correspondence/: my-slam.py
my-slam/v1v-known-correspondence/guess_in/: guess_in_i_10_s_300_l_300_p_5_a_50_ps_10.g2o
my-slam/v1w1-known-correspondence/: my-slam.py
my-slam/v1w1-known-correspondence/guess_in/: guess_in_i_10_s_300_l_300_p_100_a_1000_ps_500.g2o  guess_in_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  guess_in_i_10_s_300_l_300_p_50_a_500_ps_100.g2o
my-slam/v1w1-known-correspondence/guess_out/: guess_out_i_10_s_300_l_300_p_100_a_1000_ps_500.g2o  guess_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  guess_out_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o
my-slam/v1w1-known-correspondence/opt_out/: opt_out_i_10_s_300_l_300_p_100_a_1000_ps_500.g2o  opt_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  opt_out_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o  opt_out_i_10_s_300_l_300_p_50_a_500_ps_100.g2o  opt_out_i_10_s_300_l_300_p_5_a_50_ps_10.g2o
my-slam/v1w1-known-correspondence/sim_out/: sim_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  sim_out_i_10_s_300_l_300_p_50_a_500_ps_100.g2o
my-slam/v1w2-known-correspondence/: my-slam.py
my-slam/v1w2-known-correspondence/opt_out/: opt_out_i_10_s_300_l_300_p_100_a_1000_ps_500.g2o  opt_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  opt_out_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o  opt_out_i_10_s_300_l_300_p_50_a_500_ps_100.g2o
my-slam/v1w2-known-correspondence/sim_out/: sim_out_i_10_s_300_l_300_p_500_a_5000_ps_1000.g2o
my-slam/v2-unknown-correspondence/: my-slam.py  removeFilesInFolders.sh
my-slam/v2-unknown-correspondence/anon_out/: anon_out_i_10_s_300_l_300_p_100_a_1000_ps_500.g2o  anon_out_i_10_s_300_l_300_p_10_a_100_ps_50.g2o  (+1 more)
(+32 files in other folders)
